# chip8-emulator

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: chip8.h  cpu.h  display.h  fontset.h  input.h  memory.h
src/: chip8.cpp  cpu.cpp  display.cpp  input.cpp  main.cpp  memory.cpp
